--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,7 @@
 @import "/libs/bootstrap/dist/css/bootstrap.min.css";
 @import "header/header";
 @import "body/body";
+@import "profile/profile";
 @import url("http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext");
 
 html {
